docs: ZGC scenarios in comparison study + site comparison section
- docs/comparison-argus-vs-traditional.md: append S5-S9 (ZGC
  pathologies) mirroring existing S1-S4 format. Updated methodology
  intro to mention ZGC reproducers; aggregate scoreboard extended;
  added "ZGC Subsystem" closing paragraph. 9 scenarios total.
- site/index.html: new "Argus vs Traditional JVM Tools" section
  (id=comparison) inserted between Why-Argus and Installation.
  Five-row table covering GC pressure, NMT diff, lock contention,
  ZGC stalls, ZGC trend; one terminal block with side-by-side
  traditional vs argus zgc; sidebar nav entry added. Reuses
  existing CSS classes only (.doc-section, .table-wrap, pre code).

2 files, +158/-2.

Signed-off-by: rlaope <piyrw9754@gmail.com>